# cpp-fsrs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json  flake.nix  xmake.lua
examples/: quickstart.cpp
include/fsrs/: card.hpp  error.hpp  fsrs.hpp  json.hpp  rating.hpp  review_log.hpp  scheduler.hpp  state.hpp
include/fsrs/detail/: fuzz.hpp  math.hpp
tests/: test_basic.cpp  test_card.cpp  test_enums.cpp  test_error.cpp  test_fuzz.cpp  test_json.cpp  test_math_constants.cpp  test_reschedule.cpp  test_retrievability.cpp  test_review_learning.cpp  test_review_log.cpp  test_review_relearning.cpp  test_review_review.cpp  test_scheduler_helpers.cpp  test_validation.cpp
